Improve error handling for BufferedImageUtils
Change-Id: Ib3112432dbd56846f8f4767f70620342156a3b87